make login data visible in left menu when fixed navbar

--- a/alpheios_nemo_ui/data/assets/scss/text.scss
+++ b/alpheios_nemo_ui/data/assets/scss/text.scss
@@ -67,4 +67,8 @@
     .breadcumb-navbar {
         top: $mainnavbar-height;
     }
+
+    .main-dropdown .main-dropdown-login {
+        display: block;
+    }
 }
